Version with hardcoded partitions